# llm-class-project-w5

./: .env.exm  .gitignore  README.md  pyproject.toml  report_llama3.2_1b.md  report_phi3.md
src/crew_project_2/: crew.py  main.py
src/first_crew/: crew.py  main.py
src/first_crew/config/: agents.yaml  tasks.yaml
