[project]
name = "crew_project_2"
version = "0.1.0"
description = "crew_project_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
crew_project_2 = "crew_project_2.main:run"
run_crew = "crew_project_2.main:run"
train = "crew_project_2.main:train"
replay = "crew_project_2.main:replay"
test = "crew_project_2.main:test"
run_with_trigger = "crew_project_2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
